# AUV

./: .gitignore  commands_for_bash_task.txt  commands_for_first_task.txt
Coding/Codeforces/: temp.txt
Coding/Codeforces/Bash Scripting/: interactive.bash
Coding/Codeforces/C++/: a.out  actual_first.cpp  auto_actual_first.cpp  first.cpp
Coding/Codeforces/Python/: actual_first.py  auto_actual_first.py  first.py
Coding/Python/: Detector.py  utils.py
Coding/ROS2/my-venv/ros2_ws/src/auv_package/: package.xml  setup.cfg  setup.py
Coding/ROS2/my-venv/ros2_ws/src/auv_package/auv_package/: camera_publisher.py  detected_shapes_colours.py  vision_detector_node.py
Coding/ROS2/my-venv/ros2_ws/src/auv_package/auv_package/Python/: Detector.py
bash_task/: exp.bash  final_file.txt
bash_task/input/: a.cpp  a.out  c.cpp  d.cpp  hmm.bash
bash_task/output/: .out  a.out  c.out  d.out
first_task/3TT80P/: 4D3V2UOIOR  5SBPN4UP0J
first_task/3TT80P/QB3BBN/: 3UPRAZUFN5  Y1BG1Z0J8F
first_task/3TT80P/QB3BBN/HMQNGW/: CROH4EF5Y6  S9M4N3NKFQ
first_task/3TT80P/QB3BBN/SBWJWT/: 9GWYH0VD6Q  L2PN5DHWML
first_task/3TT80P/Z1TFR0/: CW83XXSK1R  JXH2L2RBU8
first_task/3TT80P/Z1TFR0/6G63OK/: EFMBMPGB72  HDAZLMYYVR
first_task/3TT80P/Z1TFR0/96131U/: 4J0WGX1V6X  LZN4BKHF2C
first_task/4GVG1I/: 4DHZCLPBF1  CW45MPXJQG
first_task/4GVG1I/SXN7Y3/: 6YBBKPZ133  PZJFTLVAPB
first_task/4GVG1I/SXN7Y3/V15UCU/: EDQFT3YA5W  VRXLYAI89T
first_task/4GVG1I/SXN7Y3/YP7V9M/: Q3B9L9XSX4  YOGGP6KH8P
first_task/4GVG1I/SZIMC2/: 8CYIEVWM01  NLE7X7NZYW
first_task/4GVG1I/SZIMC2/7QD4I0/: 4FO4D5Q92S  (+1 more)
(+4071 files in other folders)
